Changelog
=========

2.2.7 (unreleased)
------------------

- Revert change that silently added mime_type attribute values
  to old discussion items that had none.
  [pjstevns] 


2.2.6 (2013-05-23)
------------------

- Fix migration to not fail when member has been deleted.
  [datakurre]


2.2.5 (2013-04-06)
------------------

- Update pt_BR translation [ericof]

- Do not raise an error when no workflow is assigned to the comment type.
  [timo]

- Add a conversation property public_commentators that only lists
  commentators of comments that are public.
  The commentators indexer indexes this field now.
  The behavior of the conversation property commentators is
  unchanged.
  [do3cc]

- The last comment date now only returns the date of the newest
  published comment.
  [do3cc]


2.2.4 (2013-03-05)
------------------

- Check for 'checked' attribute in a way that work also for jQuery 1.7
  [ichimdav]

- Better fix for #13037 by removing submit event trigger altogether
  [ichimdav]

- Added Romanian translation
  [ichimdav]

- Updated Ukrainian translation
  [kroman0]

2.2.3 (2013-01-13)
------------------

- add anonymous_email_enabled settings to really let integrator activate
  the email field on comment add form when anonymous.
  [toutpt]

2.2.2 (2012-11-16)
------------------

- first check if captcha is installed before we open browsers zcml
  files that depend on these packages, fixes #12118 and #12774
  [maartenkling]


2.2.1 (2012-11-16)
------------------

- Make conversation view not break when comment-id cannot be converted to long.
  Fixes #13327
  [khink]

- fix insufficient privileges when trying to view
  the RSS feed of a comment collection
  [maartenkling]

- removed inline border=0 and move it to css
  [maartenkling]

- For migrations of comments without a valid old_status, apply the 'published'
  state.
  [thet]

- Re-apply eleddy's "Revert modification date since this is fixed in